force-app/main/default/objects/LicenseNumberAssignment__mdt/LicenseNumberAssignment__mdt.object-meta.xml
<CustomObject>
    <description>PacPoint-MV082119 - Created for PVL phase 1</description>
    <label>License Number Assignment</label>
    <pluralLabel>License Number Assignment</pluralLabel>
</CustomObject>