force-app/main/default/objects/LicenseNumberAssignment__mdt/fields/BoardProgram__c.field-meta.xml
<CustomField>
    <fullName>BoardProgram__c</fullName>
    <description>PacPoint-MV082119 - Created for PVL phase 1</description>
    <label>Board/Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>