force-app/main/default/objects/LicenseNumberAssignment__mdt/fields/LicenseType__c.field-meta.xml
<CustomField>
    <fullName>LicenseType__c</fullName>
    <description>PacPoint-MV082119 - Created for PVL phase 1</description>
    <label>License Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>